--- a/Curso-Udemy/Simple Landing Page/index.html
+++ b/Curso-Udemy/Simple Landing Page/index.html
@@ -28,6 +28,7 @@
                 <li><a href="#intro">intro</a></li>
                 <li><a href="#description-top3">description</a></li>
                 <li><a href="#gallery">gallery</a></li>
+                <li><a href="#pricing">pricing</a></li>
                 <li><a href="#">contact</a></li>
 
             </ul>
@@ -116,12 +117,106 @@
 
 </section>
 
-<section id="gallery" class="section white-bg">
-    <div class="main-content">
-        <h1>teste</h1>
+<section id="gallery" class="grid-one white-bg section">
+
+    <div class="main-content grid-one-content">
+
+        <h2 class="grid-main-heading">gallery</h2>
+
+        <p class="grid-description">breve descrição</p>
+
+        <div class="grid">
+            <div class="gallery-img">
+                <img src="https://images.unsplash.com/photo-1670939474909-6b55ce99648f?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=360&ixid=MnwxfDB8MXxyYW5kb218MHx8fHx8fHx8MTY3MTYyNjE2Ng&ixlib=rb-4.0.3&q=80&w=360"
+                    alt="imagem aleatória do unsplash">
+            </div>
+            <div class="gallery-img">
+                <img src="http://source.unsplash.com/random/360x360?r=1" alt="imagem aleatória do unsplash">
+            </div>
+            <div class="gallery-img">
+                <img src="https://images.unsplash.com/photo-1669279594631-401ecc3883d5?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=360&ixid=MnwxfDB8MXxyYW5kb218MHx8fHx8fHx8MTY3MTYyNjcyMg&ixlib=rb-4.0.3&q=80&w=360"
+                    alt="imagem aleatória do unsplash">
+            </div>
+            <div class="gallery-img">
+                <img src="http://source.unsplash.com/random/360x360?r=4" alt="imagem aleatória do unsplash">
+            </div>
+            <div class="gallery-img">
+                <img src="https://images.unsplash.com/photo-1669111957777-9cdf871e7be5?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=360&ixid=MnwxfDB8MXxyYW5kb218MHx8fHx8fHx8MTY3MTYyNzExMA&ixlib=rb-4.0.3&q=80&w=360"
+                    alt="imagem aleatória do unsplash">
+            </div>
+            <div class="gallery-img">
+                <img src="http://source.unsplash.com/random/360x360?r=9" alt="imagem aleatória do unsplash">
+            </div>
+        </div>
+
+
     </div>
+
 </section>
 
+<section id="pricing" class="main-bg section">
+    <div class="main-content top3-content">
+        <h2>pricing</h2>
+        <p>The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and some
+            surprises at the machine’s performance. This post details some background information on the experience of
+            porting
+            Firefox to run natively on these CPUs.The release of Apple Silicon-based Macs at the end of last year
+            generated
+            a
+            flurry of news coverage and some surprises at the machine’s performance. This post details some background
+            information on the experience of porting Firefox to run natively on these CPUs.</p>
+        <p>We’ll start with some background on the Mac transition and give an overview of Firefox internals that needed
+            to
+            know
+            about the new architecture, before moving on to the concept of Universal Binaries.</p>
+        <div class="responsive-table">
+            <table>
+                <caption>
+                    Pricing table
+                </caption>
+
+                <thead>
+                    <tr>
+                        <th>Title 1</th>
+                        <th>Title 2</th>
+                        <th>Title 3</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>Content 1</td>
+                        <td>Content 2</td>
+                        <td>Content 3</td>
+                    </tr>
+                    <tr>
+                        <td>Content 1</td>
+                        <td>Content 2</td>
+                        <td>Content 3</td>
+                    </tr>
+                    <tr>
+                        <td>Content 1</td>
+                        <td>Content 2</td>
+                        <td>Content 3</td>
+                    </tr>
+                    <tr>
+                        <td>Content 1</td>
+                        <td>Content 2</td>
+                        <td>Content 3</td>
+                    </tr>
+                </tbody>
+
+                <tfoot>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td>Testando</td>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
+    </div>
+</section>
 
 </body>
 
